tests/src/Loader/classloader/generics/Instantiation/Negative/param06.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_param06_param06_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param06_param06_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param06\\param06.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
